<resources>
    <string name="app_name">RailTracker</string>
    <string name="settings">Settings</string>
    <string name="tileSourceSubmenu">Tile sources</string>
    <string name="overlaysSubmenu">Overlays</string>
    <string name="title_activity_settings">Settings</string>
    <string name="locationButtonContDescription">My Location Button</string>


    <!-- Preference Titles -->
    <string name="Other_settings_header">Others</string>

    <!-- Messages Preferences -->
    <string name="clear_userdata_title">Clear user data</string>
    <string name="clear_userdata_summary">Remove stored user data from device memory</string>
    <string name="clear_userdata_key">clear_userdata_key</string>
    <string name="clear_userdata_dialog_message">Are you sure?</string>


    <!-- Dialogs -->
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="Location_settings_header"><![CDATA[Location & GPS]]></string>
    <string name="location_timeout_title">Location expiration timeout</string>
    <string name="location_timeout_key">location_timeout_key</string>
    <string name="location_cat_key">location_cat_key</string>
    <string name="myLocationsMenuItem">My locations</string>

    <!-- Texts for PositionPicker -->
    <string name="position_picker_title_text">New location</string>
    <string name="position_picker_subtitle">Coordinates</string>
    <string name="position_picker_hint">Aim to pick coordinates</string>
    <string name="position_picker_confirm_btn_text">Pick position</string>

    <!-- Texts for LocationEditor -->
    <string name="location_editor_toolbar_title">Edit location</string>
    <string name="location_editor_name_hint">Location name</string>
    <string name="location_editor_notes_hint">Notes</string>
    <string name="location_editor_save_button_text">SAVE</string>

</resources>
