<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationEditorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/locationEditorToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextColor="@android:color/background_light"
        app:title="@string/location_editor_toolbar_title" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector_save_button"
        android:theme="@style/button_confirm"
        app:layout_constraintBottom_toBottomOf="@+id/locationEditorToolbar"
        app:layout_constraintEnd_toEndOf="@+id/locationEditorToolbar"
        app:layout_constraintTop_toTopOf="@+id/locationEditorToolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/locationEditorToolbar"
        app:layout_constraintTop_toBottomOf="@+id/locationEditorToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/location_editor_name_hint"
                android:textSize="25sp"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/notesEditText"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/location_editor_notes_hint"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="@+id/nameEditText"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <TextView
                android:id="@+id/coordinatesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Coordinates:"
                app:layout_constraintStart_toStartOf="@+id/notesEditText"
                app:layout_constraintTop_toBottomOf="@+id/notesEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
